--- a/Анализ действий пользователей мобильного приложения "Ненужные вещи"/README
+++ b/Анализ действий пользователей мобильного приложения "Ненужные вещи"/README
@@ -1,1 +1,24 @@
+**Описание данных**
 
+Датасет содержит данные о событиях, совершенных в мобильном приложении "Ненужные вещи". В нем пользователи продают свои ненужные вещи, размещая их на доске объявлений.
+В датасете содержатся данные пользователей, впервые совершивших действия в приложении после 7 октября 2019 года.
+
+Колонки в `/datasets/mobile_sources.csv`:
+- `userId` — идентификатор пользователя,
+- `source` — источник, с которого пользователь установил приложение.
+
+Колонки в `/datasets/mobile_dataset.csv`:
+- `event.time` — время совершения,
+- `user.id` — идентификатор пользователя,
+- `event.name` — действие пользователя.
+
+Виды действий:
+- `advert_open` — открыл карточки объявления,
+- `photos_show` — просмотрел фотографий в объявлении,
+- `tips_show` — увидел рекомендованные объявления,
+- `tips_click` — кликнул по рекомендованному объявлению,
+- `contacts_show` и `show_contacts` — посмотрел номер телефона,
+- `contacts_call` — позвонил по номеру из объявления,
+- `map` — открыл карту объявлений,
+- `search_1` — `search_7` — разные действия, связанные с поиском по сайту,
+- `favorites_add` — добавил объявление в избранное.
